--- a/NetCoreJWTAuth.App/NetCoreJWTAuth.App.csproj
+++ b/NetCoreJWTAuth.App/NetCoreJWTAuth.App.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" />
+    <PackageReference Include="NodaTime" Version="2.2.4" />
   </ItemGroup>
 
 </Project>
